--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "lucide-react": "^0.344.0",
+    "pdfjs-dist": "^5.4.149",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/node": "^24.2.1",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
